<resources>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="title_input_phone">输入手机号</string>
    <string name="title_input_sms_code">输入验证码</string>
    <string name="title_input_pwd">设置密码</string>
    <string name="title_record">健康记录</string>
    <string name="title_ask">健康咨询</string>
    <string name="title_assess">健康评估</string>
    <string name="title_log">健康日志</string>
    <string name="app_name">掌控糖尿病</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="btn_login_submit">登录</string>
    <string name="regist">快速注册</string>
    <string name="login_username">请输入你的手机号</string>
    <string name="login_pwd">密      码</string>
    <string name="sex">性别</string>
    <string name="education">文化程度</string>
    <string name="profession">职业情况</string>
    <string name="member_name">患者名字</string>
    <string name="birthday">出生日期</string>
    <string name="relative">与本人关系</string>
    <string name="pay_method">医疗费用支付方式</string>
    <string name="yws">既往史</string>
    <string name="marital">婚姻情况</string>
    <string name="is_tnb">是否患有糖尿病</string>
    <string name="blood">是否患有糖尿病</string>
    <string name="input_phone">请输入11位手机号</string>
    <string name="input_sms_code">请输入短信中的验证码</string>
    <string name="input_realy_name">请输入姓名</string>
    <string name="submit_sms_code">提交验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="input_name">昵称（2-15个字符）</string>
    <string name="input_pwd">密码（6-16个字符）</string>
    <string name="input_pwd_repeat">请再次输入密码</string>
    <string name="menu_rec">健康记录</string>
    <string name="menu_info">健康咨询</string>
    <string name="menu_test">健康评估</string>
    <string name="msg_server">掌控糖尿病服务协议</string>
    <string name="msg_server1">我已阅读并接受</string>
    <string name="no_task">我的健康任务呢？</string>
    <string name="no_task1">如何添加任务：先点击住按钮，做一份健康评估，就可以生成任务了。</string>
    <string name="user_info">个人档案</string>
    <string name="base_info">基本信息</string>
    <string name="error">系统开小差了，正在紧急处理中~</string>
    <string name="time_out">系统开小差了，正在紧急处理中~</string>
    <string name="msg_loading">努力加载中...</string>
    <string name="label_index_score_info">目标及分数结构</string>
    <string name="record_sugar">血糖</string>
    <string name="record_bloodpress">血压</string>
    <string name="record_bmi">BMI</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="loading">努力加载中...</string>
    <string name="loading1">正在提交中...</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="waiting">请稍候...</string>
    <string name="msg_photo_nosdcard">存储卡不可用，暂无法完成拍照!</string>
    <string name="label_taskcenter">任务中心</string>
    <string name="msg_task_num">共有%d条任务</string>
    <string-array name="age_group_list">
        <item>年龄</item>
        <item>&lt;18</item>
        <item>18~24</item>
        <item>25~30</item>
        <item>31~35</item>
        <item>36~40</item>
        <item>41~50</item>
        <item>51~59</item>
        <item>>=60</item>
    </string-array>
    <string-array name="gender_group_list">
        <item>性别</item>
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_update_at">更新于 </string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_reply_content_hint">我想说</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_notification_ticker_text">有新的回复</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    <string name="set">点击我，可以设置您的血糖管理目标哦~ </string>
    <string name="saveSms">点击添加备注信息</string>
    <string name="target">血糖目标范围设置</string>
    <string name="unit">mmol/L</string>
    <string name="follow_finish">随访问卷提交成功，请耐心等待医生回复</string>
    <string name="image"></string>
    <string name="time_set"></string>
    <string name="title_health">健康指导</string>
    <string name="txt_flower">做定制任务,得健康之花</string>
    <string name="txt_flower_decs">量身为你定制任务,让你血糖快速恢复</string>
    <string name="health_result_good">您的状况良好</string>
    <string name="health_result_bad">您的状况较差</string>
    <string name="health_result_normal">您的状况一般</string>
    <string name="txt_kown">我知道了</string>
    <string name="txt_no_task_file">请更新最新的任务库</string>
    <string name="txt_flower_result">超越了附近%d%%的糖友</string>
    <string name="btn_browse_uncomplete">已阅读</string>
    <string name="btn_browse_complete">已阅读</string>
    <string name="txt_date_choose_limit">不能选择未来的时间哦 </string>
    <string name="btn_pre_task">上一项</string>
    <string name="btn_next_task">下一项</string>
    <string name="txt_iknown">知道了</string>
    <string name="txt_isee">我看完了</string>
    <string name="txt_food">每日需消耗%s卡路里</string>
    <string name="txt_food_sugest">食谱推荐</string>
    <string name="btn_pre_day">往日</string>
    <string name="btn_next_day">明日</string>
    <string name="text_food">您每日需要消耗%s卡路里</string>
    <string name="btn_input_imediately">立即录入</string>
    <string name="txt_remind_me">提醒我</string>
    <string name="txt_remind_already">已设置提醒</string>
    <string name="ask_voice_press">松开发送</string>
    <string name="ask_voice_normal">按住说话</string>
    <string name="remind_wzdl">我知道了</string>
    <string name="remind_tip">5分钟后提醒</string>
    <string name="finish">完成</string>
    <string name="consult_detail">详情</string>
    <string name="ask_content_send">发送</string>
    <string name="ask_list_nosee">您暂时还没有对话记录！</string>
    <string name="ask_list_newresponse">新回复</string>
    <string name="ask_list_lxc">来宣称</string>
    <string name="ask_question_pci2">图片2</string>
    <string name="ask_question_response2">回复2</string>
    <string name="ask_question_ask2">追问2</string>
    <string name="ask_question_content">医师的咨询服务仅为建议，不能作为您的诊疗依据。具体诊疗请前往医院，在医生指导下进行。</string>
    <string name="ask_question_systip">系统提示</string>
    <string name="ask_question_sorrytip">对不起，您没有剩余提问次数，购买并绑定掌控糖尿病智能血糖仪，可立即获得每年12次电话咨询资格！</string>
    <string name="ask_question_content1">了解／购买血糖仪</string>
    <string name="ask_question_binddevice">立即绑定设备</string>
    <string name="ask_tell_appointmentnum">请确认预约信息</string>
    <string name="ask_tell_appointment_hos">预约医院</string>
    <string name="ask_tell_appointment_department">预约科室</string>
    <string name="ask_tell_appointment_doc">预约医生</string>
    <string name="ask_tell_appointment_time">预约时间</string>
    <string name="ask_tell_phone">通话手机</string>
    <string name="ask_tell_cancel_appointment">取消预约</string>
    <string name="ask_tell_warming_tip">温馨提示：取消预约要提前半个小时哦~</string>
    <string name="Make_an_appointment">立即预约</string>
    <string name="ask_tell_doc_time">该医生咨询时间段</string>
    <string name="ask_tell_previous_day">前日</string>
    <string name="ask_tell_netx_day">次日</string>
    <string name="ask_tell_newresponse">新回复</string>
    <string name="ask_tell_re_appo">再次预约</string>
    <string name="ask_tell_ensure_mes">请确认预约信息</string>
    <string name="ask_tell_appo_time">预约时间</string>
    <string name="ask_tell_remain_times">剩余次数</string>
    <string name="ask_tell_full_pho_num">请填写通话手机</string>
    <string name="ask_tell_click_to_num">点击填写通话手机</string>
    <string name="ask_tell_sure_appo">确认预约</string>
    <string name="ask_tell_sorry_ask_tip">对不起！您没有可用的电话咨询次数</string>
    <string name="ask_tell_no_doc_tip">您暂时还没有私人医生服务，立即点击购买</string>
    <string name="ask_tell_buy_now">立即购买该私人医生服务</string>
    <string name="ask_tell_buy_tip">购买并绑定康威智能血糖仪，可立即获得每年12次的电话咨询资格</string>
    <string name="ask_tell_about_dev">了解/购买血糖仪</string>
    <string name="ask_content_pho">照片</string>
    <string name="ask_content_com">相机</string>
    <string name="ask_cobook_class_pre_pagntent_cam">相机</string>
    <string name="pop_select_pic_cam">相机</string>
    <string name="pop_select_pic_choose_from_albu">从相册中选择</string>
    <string name="ask_phon_ask">电话咨询</string>
    <string name="base_file_base_inf">基本信息</string>
    <string name="book_class_pre_pag">上一篇</string>
    <string name="book_class_nex_pag">下一篇</string>
    <string name="book_class_add_class">加入学堂</string>
    <string name="book_class_welcome">欢迎加入糖友课堂</string>
    <string name="book_class_rest">休息一下</string>
    <string name="book_class_continue_read">继续阅读</string>
    <string name="book_class_message1">太棒啦！\n我已经完成“糖尿病基础知识”篇</string>
    <string name="book_class_message2">现在进入“糖尿病饮食疗法”篇</string>
    <string name="bpush_media_back">返回</string>
    <string name="bpush_man_center">富媒体管理中心</string>
    <string name="bpush_sorry_tip">富媒体管理中心</string>
    <string name="buy_server_buy_now">立即购买</string>
    <string name="buy_server_lookfor">点击查看智能血糖仪详情</string>
    <string name="buy_server_choose_cycle">选择服务周期</string>
    <string name="collect_list_no_imf">暂时没有收藏信息</string>
    <string name="collect_list_getabout">了解健康知识</string>
    <string name="dialog_blood_tip1">你的母亲5分钟前测量了血糖</string>
    <string name="dialog_blood_low_blood">低血压</string>
    <string name="dialog_blood_high_pressure">高压</string>
    <string name="dialog_blood_low_pressure">低压</string>
    <string name="dialog_blood_head_rate">心率</string>
    <string name="dialog_blood_note_tip">注意饮食等待撒上的嘎嘎是过分噶发噶发挥好风光和梵蒂冈更好的风光好大风过后好地方更好大风过后</string>
    <string name="dialog_repeate_per">每</string>
    <string name="dialog_repeate_week">星期</string>
    <string name="dialog_repeate_month">月</string>
    <string name="dialog_repeate_year">年</string>
    <string name="dialog_repeate_norepeat">不重复</string>
    <string name="dialog_repeate_mon">星期一</string>
    <string name="dialog_repeate_tues">星期二</string>
    <string name="dialog_repeate_wen">星期三</string>
    <string name="dialog_repeate_thur">星期四</string>
    <string name="dialog_repeate_fri">星期五</string>
    <string name="dialog_repeate_sat">星期六</string>
    <string name="dialog_repeate_sun">星期日</string>
    <string name="day">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="create_member_ensure_date">糖尿病确证日期</string>
    <string name="create_member_question1">是否有典型的糖尿病症状</string>
    <string name="create_member_question2">是否得到糖尿病\n或内科医生的监管</string>
    <string name="create_member_self_test">自我评估糖尿病</string>
    <string name="create_member_question3">是否有高血糖</string>
    <string name="create_member_question4">是否有高血压</string>
    <string name="create_member_question5">是否有低血压</string>
    <string name="create_member_question6">是否有高胆固醇</string>
    <string name="create_member_question7">是否有高胆固醇</string>
</resources>