<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tab_0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_10a"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/dialog_repeate_per"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tab_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_10a"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/dialog_repeate_week"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tab_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_10a"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/dialog_repeate_month"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tab_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_10a"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/dialog_repeate_year"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tab_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_10"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/dialog_repeate_norepeat"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wheel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <com.comvee.ui.wheelview.WheelView
                android:id="@+id/num"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.comvee.ui.wheelview.WheelView
                android:id="@+id/rule"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/layout_week"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@android:color/white" >

            <TableRow>

                <CheckBox
                    android:id="@+id/check_week1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_mon"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/check_week2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_tues"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/check_week3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_wen"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/check_week4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_thur"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/check_week5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_fri"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/check_week6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_sat"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/check_week7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_sun"
                    android:textColor="@color/black" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_repeate_tues"
                    android:textColor="@color/black"
                    android:visibility="invisible" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dialog_line_h" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Dialog.Button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dialog_line_v" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/Dialog.Button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>