<?xml version="1.0" encoding="utf-8"?>
<!-- 既往史 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/yws"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_up"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_ensure_date" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question2" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_self_test" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question3" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question4" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_buttom"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/text_black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_member_question7" />
    </RelativeLayout>

</LinearLayout>